# stonefish_deployment

./: README.md
cola2_core/cola2_comms/: CMakeLists.txt  README.md  package.xml
cola2_core/cola2_comms/config/: comms.yaml
cola2_core/cola2_comms/launch/: comms.launch
cola2_core/cola2_comms/src/: comms_node.cpp
cola2_core/cola2_control/: CMakeLists.txt  README.md  package.xml  setup.py
cola2_core/cola2_control/cfg/: controller.cfg
cola2_core/cola2_control/config/: captain.yaml  controller.yaml  logitech_fx10_to_teleoperation.yaml  teleoperation.yaml
cola2_core/cola2_control/launch/: control.launch
cola2_core/cola2_control/src/: captain_node.cpp  controller_node.cpp  keyboard_node.cpp  keyboard_to_teleoperation_node.py  logitech_fx10_to_teleoperation_node.py  pilot_node.cpp  teleoperation_node.cpp
cola2_core/cola2_control/test/: test_thrusters.py
cola2_core/cola2_core/: CMakeLists.txt  package.xml
cola2_core/cola2_log/: CMakeLists.txt  README.md  package.xml
cola2_core/cola2_log/config/: default_param_handler.yaml  mission_reporter.yaml
cola2_core/cola2_log/launch/: log.launch
cola2_core/cola2_log/src/: bag_recorder_node.py  cola2_version_node.py  computer_logger_node.py  default_param_handler_node.py  mission_reporter_node.cpp  param_logger_node.py
cola2_core/cola2_log/startup_processes/: shutdown_logger_startup_process.cpp  shutdown_logger_startup_process.service
cola2_core/cola2_nav/: CMakeLists.txt  README.md  package.xml
cola2_core/cola2_nav/config/: navigator.yaml  navigator_position.yaml
cola2_core/cola2_nav/launch/: navigation.launch
cola2_core/cola2_nav/src/: navigator_node.cpp  navigator_position_node.cpp  navigator_surface_node.cpp
cola2_core/cola2_safety/: CMakeLists.txt  README.md  package.xml
cola2_core/cola2_safety/config/: safe_depth_altitude.yaml  safety_supervisor.yaml
cola2_core/cola2_safety/launch/: safety.launch
cola2_core/cola2_safety/src/: safe_depth_altitude_node.cpp  safety_supervisor_checker_node.cpp  safety_supervisor_node.cpp  virtual_cage_node.cpp  watchdog_timer_node.cpp
cola2_core/cola2_safety/test/: test_battery_control_board_rule.cpp  test_battery_control_board_rule.launch  test_battery_level_rule.cpp  test_battery_level_rule.launch  test_captain_rule.cpp  test_captain_rule.launch  test_check_enabled_rule.cpp  test_check_enabled_rule.launch  test_combined_water_inside_rule.cpp  test_combined_water_inside_rule.launch  test_common.cpp  test_common.launch  test_comms_rule.cpp  test_comms_rule.launch  test_manual_rule.cpp  test_manual_rule.launch  test_navigator_rule.cpp  test_navigator_rule.launch  test_teleoperation_rule.cpp  test_teleoperation_rule.launch  test_temperature_rule.cpp  test_temperature_rule.launch  test_virtual_cage_rule.cpp  test_virtual_cage_rule.launch  test_watchdog_timer_rule.cpp  test_watchdog_timer_rule.launch  test_water_inside_rule.cpp  test_water_inside_rule.launch
cola2_core/cola2_sim/: CMakeLists.txt  README.md  package.xml
cola2_core/cola2_sim/config/: dynamics.yaml  sim_auv_nav_sensors.yaml
cola2_core/cola2_sim/launch/: simulation.launch
cola2_core/cola2_sim/src/: dynamics_node.cpp  sim_auv_nav_sensors_node.py  sim_internal_sensors_node.cpp
cola2_core/cola2_sim/srv/: SimulatedCurrents.srv
cola2_girona500/: CHANGELOG.md  CMakeLists.txt  README.md  package.xml
cola2_girona500/config/: logitech_fx10_to_teleoperation.yaml
cola2_girona500/launch/: play_bag.launch  sim_configuration.launch  sim_start.launch  teleoperation.launch
cola2_girona500/scene/: girona500.rviz
cola2_girona500/sim_config/: captain.yaml  controller.yaml  default_param_handler.yaml  diagnostic_aggregator.yaml  dynamics.yaml  safe_depth_altitude.yaml  safety_supervisor.yaml  sim_internal_sensors.yaml  teleoperation.yaml
cola2_lib_ros/: CHANGELOG.md  CMakeLists.txt  LICENSE.txt  README.md  package.xml  setup.py
cola2_lib_ros/doc/: Doxyfile  Makefile  README.md  conf.py  doxygen_back.md
cola2_lib_ros/doc/html/: index.html
cola2_lib_ros/include/cola2_lib_ros/: captain_helper.h  diagnostic_helper.h  navigation_helper.h  param_loader.h  serviceclient_helper.h  setpoints_selector.h  (+3 more)
cola2_msgs/: CHANGELOG.md  CMakeLists.txt  README.md  package.xml
cola2_msgs/action/: Pilot.action
cola2_msgs/msg/: Bool6Axis.msg  CaptainStateFeedback.msg  CaptainStatus.msg  DecimalLatLon.msg  Float32Stamped.msg  FlsConfig.msg  GoalDescriptor.msg  ImageAcquisitionSettings.msg  KeyValueArray.msg  MissionState.msg  NavSts.msg  RPY.msg  RecoveryAction.msg  SSSConfig.msg  SafetySupervisorStatus.msg  Setpoints.msg  WorldWaypointReq.msg
cola2_msgs/srv/: Action.srv  DigitalOutput.srv  Goto.srv  MaxJoyVelocity.srv  Mission.srv  Recovery.srv  Section.srv
cola2_sparus2/: CHANGELOG.md  CMakeLists.txt  README.md  package.xml
cola2_sparus2/launch/: bag.launch  basic_bag.launch  play_bag.launch  sim_configuration.launch  sim_core.launch  sim_start.launch  teleoperation.launch
cola2_sparus2/scene/: sparus2.rviz
cola2_sparus2/sim_config/: controller.yaml  default_param_handler.yaml  dynamics.yaml  logitech_fx10_to_teleoperation.yaml  navigator.yaml  pilot.yaml  safety_supervisor.yaml  sim_auv_nav_sensors.yaml  teleoperation.yaml
cola2_stonefish/: CMakeLists.txt  README.md  package.xml
cola2_stonefish/launch/: girona500_tank_simulation.launch  girona500_valve_turning_simulation.launch  sparus2_tank_simulation.launch
cola2_stonefish/scenarios/: girona500.scn  girona500_eca5emicro.scn  girona500_tank.scn  girona500_valve_turning.scn  sparus2.scn  sparus2_tank.scn
cola2_stonefish/src/: cola2_stonefish_node.cpp
cola2_stonefish/urdf/: girona500_eca5emicro.urdf.xarco
eca_5emicro_manipulator_description/: CMakeLists.txt  README.md  package.xml
eca_5emicro_manipulator_description/launch/: view_urdf.launch
eca_5emicro_manipulator_description/urdf/: eca_5emicro.urdf.xacro  eca_5emicro_macro.urdf.xacro
girona500_description/: CHANGELOG.md  CMakeLists.txt  README.md  package.xml
girona500_description/launch/: girona500_description.launch
girona500_description/urdf/: core.urdf.xacro  payload.urdf.xacro
(+113 files in other folders)
