<?xml version="1.0"?>
<package format="2">
  <name>cola2_msgs</name>
  <version>24.1.0</version>
  <description>The cola2_msgs package</description>
  <maintainer email="software@iquarobotics.com">Iqua Robotics</maintainer>
  <license>Iqua Robotics</license>
  <buildtool_depend>catkin</buildtool_depend>

  <!-- ROS Dependencies -->
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
</package>
