<?xml version="1.0"?>
<package format="2">
  <name>eca_5emicro_manipulator_description</name>
  <version>1.0.0</version>
  <description>The eca 5emicro manipulator description package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="software@iquarobotics.com">Iqua Robotics</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>Iqua Robotics</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
