<?xml version="1.0"?>
<package format="2">
  <name>girona500_description</name>
  <version>24.1.0</version>
  <description>The girona500_description package</description>
  <maintainer email="software@iquarobotics.com">Iqua Robotics</maintainer>
  <license>Iqua Robotics</license>
  <buildtool_depend>catkin</buildtool_depend>

  <!-- ROS Dependencies -->
  <depend>robot_state_publisher</depend>

  <!-- COLA2 Dependencies -->
  <depend>cola2_lib_ros</depend>
</package>
