<?xml version="1.0"?>
<package format="2">
  <name>cola2_comms</name>
  <version>24.1.4</version>
  <description>Handle acoustic modem communications being acoustic modem driver agnostic</description>
  <maintainer email="software@iquarobotics.com">Iqua Robotics</maintainer>
  <license>Iqua Robotics</license>
  <buildtool_depend>catkin</buildtool_depend>

  <!-- ROS Dependencies -->
  <depend>roscpp</depend>
  <depend>diagnostic_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <!-- COLA2 Dependencies -->
  <depend>cola2_lib_ros</depend>
  <depend>cola2_msgs</depend>
</package>
