<?xml version="1.0"?>
<package format="2">
  <name>cola2_control</name>
  <version>24.1.4</version>
  <description>The cola2_control package</description>
  <maintainer email="software@iquarobotics.com">Iqua Robotics</maintainer>
  <license>Iqua Robotics</license>
  <buildtool_depend>catkin</buildtool_depend>

  <!-- ROS Dependencies -->
  <depend>cmake_modules</depend>
  <depend>roscpp</depend>
  <depend>rosparam</depend>
  <depend>rospy</depend>
  <depend>roslib</depend>
  <depend>tf</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>actionlib</depend>
  <depend>dynamic_reconfigure</depend>

  <!-- COLA2 Dependencies -->
  <depend>cola2_lib_ros</depend>
  <depend>cola2_msgs</depend>
</package>
