<?xml version="1.0"?>
<package format="2">
  <name>cola2_core</name>
  <version>24.1.4</version>
  <description>The cola2_core meta package</description>
  <maintainer email="software@iquarobotics.com">Iqua Robotics</maintainer>
  <license>Iqua Robotics</license>
  <buildtool_depend>catkin</buildtool_depend>

  <!-- TODO: check this -->
  <exec_depend>cola2_safety</exec_depend>
  <exec_depend>cola2_sim</exec_depend>
  <exec_depend>cola2_control</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
