<?xml version="1.0"?>
<package format="2">
  <name>cola2_nav</name>
  <version>24.1.4</version>
  <description>The cola2_nav package</description>
  <maintainer email="software@iquarobotics.com">Iqua Robotics</maintainer>
  <license>Iqua Robotics</license>
  <buildtool_depend>catkin</buildtool_depend>

  <!-- ROS Dependencies -->
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>nav_msgs</depend>

  <!-- COLA2 Dependencies -->
  <depend>cola2_lib_ros</depend>
  <depend>cola2_msgs</depend>
</package>
